fix searchNameCharacter and update docs
